--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,5 +1,12 @@
+#bottom {
+  background-image: linear-gradient(
+    135deg,
+    $primary-color 0%,
+    $secondary-color 100%
+  );
+}
+
 .footer {
-  background-color: $dark-grey;
   color: $white-color;
   padding: 4.8rem 0;
 
@@ -8,7 +15,7 @@
   }
 
   &__text {
-    color: darken($white-color, 50%);
+    color: $white-color;
     font-size: 1.3rem;
 
     a {
@@ -16,7 +23,6 @@
       font-size: 1.3rem;
       transition: all 0.4s;
       display: inline-block;
-      background-color: $dark-grey;
 
       &:hover,
       &:active {
@@ -31,7 +37,7 @@
     margin: 1rem auto;
     border: 0;
     width: 50%;
-    border-top: 2px solid grey;
+    border-top: 2px solid $white-color;
   }
 }
 
